fixed: update syllabus
